; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/clocksource/extr_sh_mtu2.c_sh_mtu2_clock_event_mode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/clocksource/extr_sh_mtu2.c_sh_mtu2_clock_event_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clock_event_device = type { i32, i32 }
%struct.sh_mtu2_priv = type { i32 }

@.str = private unnamed_addr constant [44 x i8] c"sh_mtu2: %s used for periodic clock events\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.clock_event_device*)* @sh_mtu2_clock_event_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sh_mtu2_clock_event_mode(i32 %0, %struct.clock_event_device* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.clock_event_device*, align 8
  %5 = alloca %struct.sh_mtu2_priv*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store %struct.clock_event_device* %1, %struct.clock_event_device** %4, align 8
  %7 = load %struct.clock_event_device*, %struct.clock_event_device** %4, align 8
  %8 = call %struct.sh_mtu2_priv* @ced_to_sh_mtu2(%struct.clock_event_device* %7)
  store %struct.sh_mtu2_priv* %8, %struct.sh_mtu2_priv** %5, align 8
  store i32 0, i32* %6, align 4
  %9 = load %struct.clock_event_device*, %struct.clock_event_device** %4, align 8
  %10 = getelementptr inbounds %struct.clock_event_device, %struct.clock_event_device* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  switch i32 %11, label %15 [
    i32 130, label %12
  ]

12:                                               ; preds = %2
  %13 = load %struct.sh_mtu2_priv*, %struct.sh_mtu2_priv** %5, align 8
  %14 = call i32 @sh_mtu2_disable(%struct.sh_mtu2_priv* %13)
  store i32 1, i32* %6, align 4
  br label %16

15:                                               ; preds = %2
  br label %16

16:                                               ; preds = %15, %12
  %17 = load i32, i32* %3, align 4
  switch i32 %17, label %33 [
    i32 130, label %18
    i32 128, label %25
    i32 129, label %32
  ]

18:                                               ; preds = %16
  %19 = load %struct.clock_event_device*, %struct.clock_event_device** %4, align 8
  %20 = getelementptr inbounds %struct.clock_event_device, %struct.clock_event_device* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @pr_info(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i32 %21)
  %23 = load %struct.sh_mtu2_priv*, %struct.sh_mtu2_priv** %5, align 8
  %24 = call i32 @sh_mtu2_enable(%struct.sh_mtu2_priv* %23)
  br label %34

25:                                               ; preds = %16
  %26 = load i32, i32* %6, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %31, label %28

28:                                               ; preds = %25
  %29 = load %struct.sh_mtu2_priv*, %struct.sh_mtu2_priv** %5, align 8
  %30 = call i32 @sh_mtu2_disable(%struct.sh_mtu2_priv* %29)
  br label %31

31:                                               ; preds = %28, %25
  br label %34

32:                                               ; preds = %16
  br label %33

33:                                               ; preds = %16, %32
  br label %34

34:                                               ; preds = %33, %31, %18
  ret void
}

declare dso_local %struct.sh_mtu2_priv* @ced_to_sh_mtu2(%struct.clock_event_device*) #1

declare dso_local i32 @sh_mtu2_disable(%struct.sh_mtu2_priv*) #1

declare dso_local i32 @pr_info(i8*, i32) #1

declare dso_local i32 @sh_mtu2_enable(%struct.sh_mtu2_priv*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
